trunk/Archive2/1f/69e794b4c7074e/output
main.cpp:31:27: error: expected ')'
int main(int argc, char*[]argv){
                          ^
main.cpp:31:9: note: to match this '('
int main(int argc, char*[]argv){
        ^
main.cpp:32:21: error: expected ';' after expression
    next_permutation
                    ^
                    ;
main.cpp:32:5: error: reference to overloaded function could not be resolved; did you mean to call it?
    next_permutation
    ^~~~~~~~~~~~~~~~
main.cpp:7:6: note: possible target for call
bool next_permutation(BidirIt first, BidirIt last)
     ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:3734:5: note: possible target for call
    next_permutation(_BidirectionalIterator __first,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:3677:5: note: possible target for call
    next_permutation(_BidirectionalIterator __first,
    ^
main.cpp:31:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char*[]argv){
             ^
1 warning and 3 errors generated.
